--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>Quiz</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -52,7 +52,7 @@
                 <div class="form-group">
                     <input type="number" class="form-control" name="" id="numberOfQuestions" aria-describedby="helpId" placeholder="Number Of Questions" required>
                 </div>
-                <div id="alert1" class="alert alert-danger mt-3">Please Choose Number Of Questions</div>
+                <div id="alert1" class="alert alert-danger mt-3">Number Of Questions</div>
                 <button id="startBtn" class="btn float-right py-2 px-4 bg-spec rounded-pill text-white my-4">Start</button>
                 <div class="clearfix"></div>
             </div>
